--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,23 @@
-name: Generate Contribution Snake
+name: Generate Datas
 
 on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:  # Allows manual triggering of the workflow
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+  workflow_dispatch:
 
 jobs:
-  generate-snake:
+  build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
-
     steps:
-      # Checks out the repository
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      # Generates the snake
-      - name: Generate Snake GIF
-        uses: Platane/snk@master
+      # Snake Animation
+      - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: Moneemabdullah
-          gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # Show the status of the build
-      - name: Check git status
-        run: git status
-
-      # Push the changes to the master branch
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
-
-      # Deploy to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
