--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
-      - uses: Platane/snk@latest  # Check for the latest version
+      - uses: Platane/snk@v2.0.0  # Replace with the latest version found
         id: snake-gif
         with:
           github_user_name: Moneemabdullah
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - uses: crazy-max/ghaction-github-pages@latest  # Update to latest version
+      - uses: crazy-max/ghaction-github-pages@v2.1.3  # Use the latest version found
         with:
           target_branch: output
           build_dir: dist
